while close new stage no data available showing issue fixed

--- a/findly-builder/src/app/components/index/index.component.html
+++ b/findly-builder/src/app/components/index/index.component.html
@@ -36,7 +36,7 @@
                 <img src="assets/images/activeStage.svg" />
               </div>
               <div class="title text-truncate">Choose Stage Type</div>
-              <div class="close_icon" (click)="showNewStageType=false">
+              <div class="close_icon" (click)="closeNewStage()">
                 <img src="assets/icons/close_field.svg" />
               </div>
             </div>
