--- a/findly-builder/src/app/components/add-structured-data/add-structured-data.component.scss
+++ b/findly-builder/src/app/components/add-structured-data/add-structured-data.component.scss
@@ -241,3 +241,17 @@
     position: relative;
     z-index: 99;
 }
+
+.navigation-block {
+    &.disabled{
+        pointer-events: none;
+        opacity: 0.5;
+    }
+    .navigation-btn{
+        cursor: pointer;
+        &.disabled{
+            pointer-events: none;
+            opacity: 0.5;
+        }
+    }
+}
