FLY-1140,1461(excluding faq,result ranking,synonym),1515,865,864

--- a/findly-builder/src/app/components/app-experiments/app-experiments.component.scss
+++ b/findly-builder/src/app/components/app-experiments/app-experiments.component.scss
@@ -1,4 +1,9 @@
 .experiment-container {
+  .empty-landing-screen{
+    .kr-sg-button-primary{
+      margin-top: 20px;
+    }
+  }
   .header-sec {
     background: #f8f9fa;
     border-radius: 4px;
