--- a/findly-builder/src/app/components/bot-action/bot-action.component.html
+++ b/findly-builder/src/app/components/bot-action/bot-action.component.html
@@ -179,7 +179,7 @@
           </div>
           <div class="kr-sg-dropdowns" ngbDropdown [container]="'body'">                                         
               <div class="dropdown dropdown-open">
-                <button class="kr-sg-button-primary" (click)="openBotsModalElement()"> Link a Bot</button>                                            
+                <button class="kr-sg-button-primary btn_lg px-3" (click)="openBotsModalElement()"> Link a Bot</button>                                            
               </div>
           </div>
       </ng-container>
