--- a/findly-builder/src/app/components/field-management/field-management.component.scss
+++ b/findly-builder/src/app/components/field-management/field-management.component.scss
@@ -133,7 +133,7 @@
                         }
                     }
                     .title{
-                        padding: 0 5px;
+                        padding: 0px 5px 0px 22px;
                         font-style: normal;
                         font-size: 14px;
                         line-height: 14px;
